--- a/contents/3DPrinCar/index.html
+++ b/contents/3DPrinCar/index.html
@@ -133,6 +133,16 @@
 		<section>
 			<h2>書誌情報</h2>
 			<ol>
+
+				<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018． （to appear.）
+					<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
+					 target="_blank">
+						<i class="glyphicon glyphicon-link"></i>
+					</a>
+					<a href="https://www.youtube.com/watch?v=jG5BceMWTeU" target="_blank">
+						<i class="glyphicon glyphicon-film"></i>
+					</a>
+				</li>
 			</ol>
 		</section>
 	</div>
