--- a/profile.html
+++ b/profile.html
@@ -49,21 +49,38 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
-							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+								<span class="caret"></span>
+							</a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="index.html">Products</a></li>
-								<li><a href="library.html">Libraries</a></li>
+								<li>
+									<a href="index.html">Products</a>
+								</li>
+								<li>
+									<a href="library.html">Libraries</a>
+								</li>
 							</ul>
 						</li>
 						<li class="dropdown active">
-							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile
+								<span class="caret"></span>
+							</a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="profile.html">日本語</a></li>
-								<li><a href="profileEng.html">English</a></li>
+								<li>
+									<a href="profile.html">日本語</a>
+								</li>
+								<li>
+									<a href="profileEng.html">English</a>
+								</li>
 							</ul>
 						</li>
-						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+						<li>
+							<a href="https://twitter.com/gutugutu3030">
+								<i class="fa fa-twitter"></i> Twitter</a>
+						</li>
+						<li>
+							<a href="https://sites.google.com/site/gutugutu30/">備忘録</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -78,95 +95,162 @@
 				<img class="img-rounded img-responsive" src="icon.svg" />
 			</div>
 			<div class="col-sm-8">
-				<h2>秋山 耀 <small>Yoh Akiyama</small></h2>
+				<h2>秋山 耀
+					<small>Yoh Akiyama</small>
+				</h2>
 				<ul style="list-style-type:none;">
 					<li>明治大学大学院理工学研究科新領域創造専攻2年</li>
-					<li>学部生時代<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
-					<li><a href="http://miyashita.com/">宮下研究室</a>所属</li>
-					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
-					<li>予定は<a href="https://calendar.google.com/calendar/embed?src=21rsqm0npancku5es49jd8h55k%40group.calendar.google.com&ctz=Asia/Tokyo"
-						 target="_blank"><i class="glyphicon glyphicon-calendar"></i>こちら</a>からご確認ください（二度手間はいやです）</li>
+					<li>学部生時代
+						<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
+					<li>
+						<a href="http://miyashita.com/">宮下研究室</a>所属</li>
+					<li>
+						<i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
+					<li>予定は
+						<a href="https://calendar.google.com/calendar/embed?src=21rsqm0npancku5es49jd8h55k%40group.calendar.google.com&ctz=Asia/Tokyo"
+						 target="_blank">
+							<i class="glyphicon glyphicon-calendar"></i>こちら</a>からご確認ください（二度手間はいやです）</li>
 				</ul>
 				<ul style="list-style-type:none;">
-					<li>趣味：電子工作・プログラミング・8mm映写機いじり・<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a></li>
+					<li>趣味：電子工作・プログラミング・8mm映写機いじり・
+						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a>
+					</li>
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
 					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
 				</ul>
-				<p>最近は3Dプリンタ関係の研究をしています．Web系は苦手です．<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
+				<p>最近は3Dプリンタ関係の研究をしています．Web系は苦手です．
+					<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
 					<a href="contents/Gilgamesh/index.html" target="_blank">こういうこと</a>して暮らしたい．</p>
 			</div>
 		</div>
 		<div>
 			<h2>作ったものリスト</h2>
-			<p><a href="index.html">こちら</a>をごらんください．</p>
-			<p>時間があれば<a href="timeline.html">こちら</a>もごらんください．</p>
+			<p>
+				<a href="index.html">こちら</a>をごらんください．</p>
+			<p>時間があれば
+				<a href="timeline.html">こちら</a>もごらんください．</p>
 		</div>
 		<div>
 			<h2>お仕事</h2>
 			<ol>
-				<li>2017年7月24日 <a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a></li>
-				<li>2017年9月22日 <a href="http://eonet.jp/zing/articles/_4101119.html" target="_blank">Zing!,「まるでハンドパワー！「手をかざすと動く台」をFabってみた」</a></li>
+				<li>2017年7月24日
+					<a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a>
+				</li>
+				<li>2017年9月22日
+					<a href="http://eonet.jp/zing/articles/_4101119.html" target="_blank">Zing!,「まるでハンドパワー！「手をかざすと動く台」をFabってみた」</a>
+				</li>
 			</ol>
 		</div>
 		<div>
 			<h2>Publications</h2>
 			<ul style="list-style-type:none;">
-				<li>査読付き学術論文
+				<li>
+					<h4>査読付き学術論文</h4>
 					<ol>
 						<li>秋山耀, 宮下芳明. プロジェクションマッピングによる電子工作体験支援. 日本バーチャルリアリティ学会論文誌, Vol.20, No.2, pp.83-86, 2015.
-							<a href="https://www.dropbox.com/s/2shf337zay5omss/vr.pdf?dl=0" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-							<a href="http://ci.nii.ac.jp/naid/40020528769" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
-							<a href="https://www.youtube.com/watch?v=N3dJ4XRDF1I" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+							<a href="https://www.dropbox.com/s/2shf337zay5omss/vr.pdf?dl=0" target="_blank">
+								<i class="fa fa-file-pdf-o"></i>
+							</a>
+							<a href="http://ci.nii.ac.jp/naid/40020528769" target="_blank">
+								<i class="glyphicon glyphicon-link"></i>
+							</a>
+							<a href="https://www.youtube.com/watch?v=N3dJ4XRDF1I" target="_blank">
+								<i class="glyphicon glyphicon-film"></i>
+							</a>
 						</li>
 					</ol>
 				</li>
-				<li>査読付き国際会議（デモ・ポスター・動画発表）
+				<li>
+					<h4>国際会議（デモ・ポスター・動画発表）</h4>
 					<ol>
 						<li>Yoh Akiyama and Homei Miyashita. Electronic kit with no current flow that uses projection mapping. CHI '14 Extended
 							Abstracts on Human Factors in Computing Systems(CHI2014), pp.155-156, 2014.
-							<a href="http://dl.acm.org/citation.cfm?id=2559206.2579523&coll=DL&dl=ACM" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+							<a href="http://dl.acm.org/citation.cfm?id=2559206.2579523&coll=DL&dl=ACM" target="_blank">
+								<i class="fa fa-file-pdf-o"></i>
+							</a>
 						</li>
 						<li>Yoh Akiyama and Homei Miyashita. Projectron Mapping: The Exercise and Extension of Augmented Workspaces for Learning
 							Electronic Modeling through Projection Mapping. Proceedings of the adjunct publication of the 27th annual ACM symposium
 							on User interface software and technology(UIST2014), pp.57-58, 2014.
-							<a href="http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+							<a href="http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM" target="_blank">
+								<i class="fa fa-file-pdf-o"></i>
+							</a>
 							<strong class="text-info">(SUI2014で招待デモ発表)</strong>
 						</li>
 						<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects. Proceedings of
 							the adjunct publication of the 29th annual ACM symposium on User interface software and technology(UIST2016), pp.129-131,
 							2016.
-							<a href="http://dl.acm.org/citation.cfm?id=2985730&CFID=853513149&CFTOKEN=66983434" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+							<a href="http://dl.acm.org/citation.cfm?id=2985730&CFID=853513149&CFTOKEN=66983434" target="_blank">
+								<i class="fa fa-file-pdf-o"></i>
+							</a>
 						</li>
 					</ol>
 				</li>
-				<li>査読付き国内会議（登壇）
-					<ol>
-						<li>秋山耀, 宮下芳明. 3DプリンタのためのPaper User Interface. 第24回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2016), pp.185-191, 2016.
+				<li>
+					<h4>国内会議</h4>
+					<ul style="list-style-type:none;margin-left: 0;padding-left:0;">
+						<li>査読付き口頭発表
+							<ol>
+								<li>秋山耀, 宮下芳明. 3DプリンタのためのPaper User Interface. 第24回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2016), pp.185-191, 2016.
+									<a href="http://www.wiss.org/WISS2016Proceedings/oral/25.pdf" target="_blank">
+										<i class="fa fa-file-pdf-o"></i>
+									</a>
+									<a href="https://www.youtube.com/watch?v=54m38d4nUgg" target="_blank">
+										<i class="glyphicon glyphicon-film"></i>
+									</a>
+								</li>
+							</ol>
 						</li>
-					</ol>
+						<li>査読なし口頭発表
+							<ol>
+								<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018． （to appear.）
+									<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
+									 target="_blank">
+										<i class="glyphicon glyphicon-link"></i>
+									</a>
+									<a href="https://www.youtube.com/watch?v=jG5BceMWTeU" target="_blank">
+										<i class="glyphicon glyphicon-film"></i>
+									</a>
+								</li>
+							</ol>
+						</li>
+						<li>査読なしデモ・ポスター発表
+							<ol>
+								<li>秋山耀, 宮下芳明. 部品へのプロジェクションマッピングによる通電しない電子工作. 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2013), pp.141-142, 2013.
+									<a href="http://www.wiss.org/WISS2013Proceedings/demo/089.pdf" target="_blank">
+										<i class="fa fa-file-pdf-o"></i>
+									</a>
+									<strong class="text-info">[対話発表賞]</strong>
+								</li>
+								<li>加藤邦拓, 秋山耀, 宮下芳明. タッチ入力の柔軟な再配置を可能としたインタフェースの作成支援. 第22回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2014), pp.151-152, 2014.
+									<a href="http://www.wiss.org/WISS2014Proceedings/demo/086.pdf" target="_blank">
+										<i class="fa fa-file-pdf-o"></i>
+									</a>
+									<a href="https://www.youtube.com/watch?v=hM2Jfhzky48" target="_blank">
+										<i class="glyphicon glyphicon-film"></i>
+									</a>
+								</li>
+								<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), pp.183-184, 2015.
+									<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank">
+										<i class="fa fa-file-pdf-o"></i>
+									</a>
+								</li>
+							</ol>
+						</li>
+					</ul>
 				</li>
-				<li>デモ・ポスター発表
-					<ol>
-						<li>秋山耀, 宮下芳明. 部品へのプロジェクションマッピングによる通電しない電子工作. 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2013), pp.141-142, 2013.
-							<a href="http://www.wiss.org/WISS2013Proceedings/demo/089.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-							<strong class="text-info">[対話発表賞]</strong>
-						</li>
-						<li>加藤邦拓, 秋山耀, 宮下芳明. タッチ入力の柔軟な再配置を可能としたインタフェースの作成支援. 第22回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2014), pp.151-152, 2014.
-							<a href="http://www.wiss.org/WISS2014Proceedings/demo/086.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-							<a href="https://www.youtube.com/watch?v=hM2Jfhzky48" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
-						</li>
-						<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), pp.183-184, 2015.
-							<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-						</li>
-					</ol>
-				</li>
-				<li>メディア報道（新聞・テレビ）
+
+				<li><h4>メディア報道（新聞・テレビ）</h4>
 					<ol>
 						<li>「コピー感覚で立体造形−明治大、３年以内に新３Ｄプリンター実用化」, 日刊工業新聞記事掲載, (2016年9月16日付).
-							<a href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+							<a href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank">
+								<i class="glyphicon glyphicon-link"></i>
+							</a>
 						</li>
 						<li>「【トレたま】コピー機感覚の３Ｄプリンター」, テレビ東京 WBS「トレンドたまご」取材, (2016年10月3日放送).
-							<a href="http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+							<a href="http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/" target="_blank">
+								<i class="glyphicon glyphicon-link"></i>
+							</a>
 						</li>
 						<li>「明治大の３Ｄプリンター　形や大きさ，調整容易　タッチパネル使う試作機」, 日経産業新聞記事掲載, (2016年10月12日付).
 						</li>
@@ -174,21 +258,27 @@
 						</li>
 					</ol>
 				</li>
-				<li>展示
+				<li><h4>展示</h4>
 					<ol>
 						<li>Fitter：実寸に合ったものを得るシステム, Maker Faire Tokyo 2016, 明治大学宮下研究室出展, (2016年8月6-7日).
-							<a href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+							<a href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank">
+								<i class="glyphicon glyphicon-link"></i>
+							</a>
 						</li>
 					</ol>
 				</li>
 
-				<li>その他
+				<li><h4>その他</h4>
 					<ul style="list-style-type:none;">
 						<li>卒論　部分グラフ同型アルゴリズムの実装と回路理解支援システムへの応用.
-							<a href="http://www.th.cs.meiji.ac.jp/researches/2015/akiyama/thesis.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+							<a href="http://www.th.cs.meiji.ac.jp/researches/2015/akiyama/thesis.pdf" target="_blank">
+								<i class="fa fa-file-pdf-o"></i>
+							</a>
 						</li>
 						<li>新たな技術を福祉にいかす体験ワークショップ, 研究事例紹介, (2017年9月6日).
-							<a href="http://goodjobcenter.com/topics/report/959/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+							<a href="http://goodjobcenter.com/topics/report/959/" target="_blank">
+								<i class="glyphicon glyphicon-link"></i>
+							</a>
 						</li>
 					</ul>
 				</li>
@@ -198,8 +288,12 @@
 			<h2>Awards</h2>
 			<ol>
 				<li>2013年12月 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集 対話発表賞 「部品へのプロジェクションマッピングによる通電しない電子工作」</li>
-				<li>2016年9月17日 <a href="http://ictco.jp/syousai.html?id=137" target="_blank">第二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a></li>
-				<li>2017年3月17日 <a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」</a></li>
+				<li>2016年9月17日
+					<a href="http://ictco.jp/syousai.html?id=137" target="_blank">第二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a>
+				</li>
+				<li>2017年3月17日
+					<a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」</a>
+				</li>
 			</ol>
 		</div>
 	</div>
