--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -14,14 +14,14 @@
 		body {
 			padding-top: 80px;
 		}
-		
+
 		ol li {
 			list-style-type: none;
 			list-style-position: inside;
 			counter-increment: cnt;
 			margin-bottom: 0.5em;
 		}
-		
+
 		ol li:before {
 			display: marker;
 			content: "[" counter(cnt) "] ";
@@ -49,22 +49,39 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="active dropdown">
-							<a href="../../index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+							<a href="../../index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+								<span class="caret"></span>
+							</a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="../../index.html">Products</a></li>
-								<li><a href="../../library.html">Libraries</a></li>
+								<li>
+									<a href="../../index.html">Products</a>
+								</li>
+								<li>
+									<a href="../../library.html">Libraries</a>
+								</li>
 							</ul>
 						</li>
 
 						<li class="dropdown">
-							<a href="../../profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+							<a href="../../profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile
+								<span class="caret"></span>
+							</a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="../../profile.html">日本語</a></li>
-								<li><a href="../../profileEng.html">English</a></li>
+								<li>
+									<a href="../../profile.html">日本語</a>
+								</li>
+								<li>
+									<a href="../../profileEng.html">English</a>
+								</li>
 							</ul>
 						</li>
-						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+						<li>
+							<a href="https://twitter.com/gutugutu3030">
+								<i class="fa fa-twitter"></i> Twitter</a>
+						</li>
+						<li>
+							<a href="https://sites.google.com/site/gutugutu30/">備忘録</a>
+						</li>
 
 					</ul>
 				</div>
@@ -73,7 +90,9 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>3DプリンタのためのPaper User Interface <small>紙に描いた図面から造形できる3Dプリンタ</small></h1>
+			<h1>3DプリンタのためのPaper User Interface
+				<small>紙に描いた図面から造形できる3Dプリンタ</small>
+			</h1>
 		</section>
 		<section>
 			<div class="row">
@@ -131,6 +150,12 @@
 			<h2>書誌情報</h2>
 			<ol>
 				<li>秋山耀, 宮下芳明. 3DプリンタのためのPaper User Interface. 第24回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2016), pp.185-191, 2016.
+					<a href="http://www.wiss.org/WISS2016Proceedings/oral/25.pdf" target="_blank">
+						<i class="fa fa-file-pdf-o"></i>
+					</a>
+					<a href="https://www.youtube.com/watch?v=54m38d4nUgg" target="_blank">
+						<i class="glyphicon glyphicon-film"></i>
+					</a>
 				</li>
 			</ol>
 		</section>
@@ -139,8 +164,12 @@
 			<ul>
 				<li>日経産業新聞で紹介されました！
 				</li>
-				<li>ズームイン！！サタデーのフューチャリスタで取り上げられました！ <a href="http://www.fms-meiji.jp/archives/1191">http://www.fms-meiji.jp/archives/1191</a></li>
-				<li>ＺＩＰ！のな～るほどマスカレッジで取り上げられました！ <a href="http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html">http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html</a></li>
+				<li>ズームイン！！サタデーのフューチャリスタで取り上げられました！
+					<a href="http://www.fms-meiji.jp/archives/1191">http://www.fms-meiji.jp/archives/1191</a>
+				</li>
+				<li>ＺＩＰ！のな～るほどマスカレッジで取り上げられました！
+					<a href="http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html">http://www.meiji.ac.jp/ims/news/2016/6t5h7p00000n3ggr.html</a>
+				</li>
 			</ul>
 		</section>
 		<section>
