受賞歴追加

--- a/profile.html
+++ b/profile.html
@@ -240,7 +240,8 @@
 					</ul>
 				</li>
 
-				<li><h4>メディア報道（新聞・テレビ）</h4>
+				<li>
+					<h4>メディア報道（新聞・テレビ）</h4>
 					<ol>
 						<li>「コピー感覚で立体造形−明治大、３年以内に新３Ｄプリンター実用化」, 日刊工業新聞記事掲載, (2016年9月16日付).
 							<a href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank">
@@ -258,7 +259,8 @@
 						</li>
 					</ol>
 				</li>
-				<li><h4>展示</h4>
+				<li>
+					<h4>展示</h4>
 					<ol>
 						<li>Fitter：実寸に合ったものを得るシステム, Maker Faire Tokyo 2016, 明治大学宮下研究室出展, (2016年8月6-7日).
 							<a href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank">
@@ -268,7 +270,8 @@
 					</ol>
 				</li>
 
-				<li><h4>その他</h4>
+				<li>
+					<h4>その他</h4>
 					<ul style="list-style-type:none;">
 						<li>卒論　部分グラフ同型アルゴリズムの実装と回路理解支援システムへの応用.
 							<a href="http://www.th.cs.meiji.ac.jp/researches/2015/akiyama/thesis.pdf" target="_blank">
@@ -288,11 +291,20 @@
 			<h2>Awards</h2>
 			<ol>
 				<li>2013年12月 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集 対話発表賞 「部品へのプロジェクションマッピングによる通電しない電子工作」</li>
-				<li>2016年9月17日
-					<a href="http://ictco.jp/syousai.html?id=137" target="_blank">第二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」</a>
+				<li>2016年9月17日 二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」
+					<a href="http://ictco.jp/syousai.html?id=137" target="_blank">
+						<i class="glyphicon glyphicon-link"></i>
+					</a>
 				</li>
-				<li>2017年3月17日
-					<a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」</a>
+				<li>2017年3月17日 第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」
+					<a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">
+						<i class="glyphicon glyphicon-link"></i>
+					</a>
+				</li>
+				<li>2018年 第176回ヒューマンコンピュータインタラクション研究会 学生奨励賞 「3DPrinCar：行き先に応じた物品を推薦・提供する乗用車」
+					<a href="http://www.meiji.ac.jp/ams/info/6t5h7p00000qa5i3.html" target="_blank">
+						<i class="glyphicon glyphicon-link"></i>
+					</a>
 				</li>
 			</ol>
 		</div>
