--- a/contents/3DPrinCar/index.html
+++ b/contents/3DPrinCar/index.html
@@ -134,7 +134,7 @@
 			<h2>書誌情報</h2>
 			<ol>
 
-				<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018． （to appear.）
+				<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018．
 					<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
 					 target="_blank">
 						<i class="glyphicon glyphicon-link"></i>
@@ -142,6 +142,7 @@
 					<a href="https://www.youtube.com/watch?v=jG5BceMWTeU" target="_blank">
 						<i class="glyphicon glyphicon-film"></i>
 					</a>
+					<strong class="text-info">[学生奨励賞]</strong>
 				</li>
 			</ol>
 		</section>
