--- a/contents/3DPrinCar/indexEng.html
+++ b/contents/3DPrinCar/indexEng.html
@@ -90,7 +90,7 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>3DPrinCar: a car to suggest and provide goods depending on destinations
+			<h1>3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination
 			</h1>
 		</section>
 		<section>
@@ -134,7 +134,7 @@
 			<h2>書誌情報</h2>
 			<ol>
 
-				<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018．
+				<li>Akiyama Yoh, Miyashita Homei. 3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination. IPSJ SIGHCI Technical Report, Vol.2018-HCI-176，Issue.6，No.12，2018．(Japanese)
 					<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
 					 target="_blank">
 						<i class="glyphicon glyphicon-link"></i>
