--- a/contents/3DPrinCar/indexEng.html
+++ b/contents/3DPrinCar/indexEng.html
@@ -122,9 +122,9 @@
 				</div>
 				<div class="col-sm-12">
 					<div class="thumbnail">
-						<img src="system.jpg">
+						<img src="systemEng.jpg">
 						<div class="caption">
-							<p>システム構成; a)システムインタフェース概観（助手席）, b)3Dプリンタ（トランク）, c)推薦インタフェース.</p>
+							<p>System configuration: a) System interface overview (front passenger seat), b) 3D printer (trunk), c) Recommending interface.</p>
 						</div>
 					</div>
 				</div>
