--- a/contents/3DPrinCar/indexEng.html
+++ b/contents/3DPrinCar/indexEng.html
@@ -103,9 +103,18 @@
 				</div>
 				<div class="col-sm-12">
 					<h2>Abstract</h2>
-					<p>In this paper, we proposed "3DPrinCar", which suggests and provides goods depending on destinations by combining 3D Printer and car navigation system. For example, destination is related to sea, 3DPrinCar suggests goods related to sea. And 3DPrinCar prepare two providing methods; 3D Printing goods inside of a car or stopping by shop and purchasing goods. If users choice 3D Printing, users arrivals at the destination and system finishes 3D Printing at same time by controling 3D Printing accuracy. If users choice Stopping by shop, system add the shop as transit point to car navigation system.</p>
-					<p>We reseach effects on travel experience by 3DPrinCar. We conducted experiments of 8 day trips. users got 9 kinds, 16 goods by 3D printing (2 goods of those is error of printing); They are playthings(boomerang and frisbee), items in the car (PET bottle holder, carabiner, trash case), cutlery (cup, dish). Users 3D printed and used them at destination or in the car at return path by more comfortably. Users stop by shop once and didn't buy anything.</p>
-					<p> By goods suggested by the system, not only inconvenience in the car and destination were improved, but also activities at the destination were diversified and the range of action were expanded.</p>
+					<p>In this paper, we proposed "3DPrinCar", which suggests and provides goods depending on destinations by combining 3D
+						Printer and car navigation system. For example, destination is related to sea, 3DPrinCar suggests goods related to
+						sea. And 3DPrinCar prepare two providing methods; 3D Printing goods inside of a car or stopping by shop and purchasing
+						goods. If users choice 3D Printing, users arrivals at the destination and system finishes 3D Printing at same time
+						by controling 3D Printing accuracy. If users choice Stopping by shop, system add the shop as transit point to car navigation
+						system.</p>
+					<p>We reseach effects on travel experience by 3DPrinCar. We conducted experiments of 8 day trips. users got 9 kinds, 16
+						goods by 3D printing (2 goods of those is error of printing); They are playthings(boomerang and frisbee), items in
+						the car (PET bottle holder, carabiner, trash case), cutlery (cup, dish). Users 3D printed and used them at destination
+						or in the car at return path by more comfortably. Users stop by shop once and didn't buy anything.</p>
+					<p> By goods suggested by the system, not only inconvenience in the car and destination were improved, but also activities
+						at the destination were diversified and the range of action were expanded.</p>
 				</div>
 			</div>
 		</section>
@@ -124,7 +133,17 @@
 					<div class="thumbnail">
 						<img src="systemEng.jpg">
 						<div class="caption">
-							<p>System configuration: a) System interface overview (front passenger seat), b) 3D printer (trunk), c) Recommending interface.</p>
+							<p>System configuration: a) System interface overview (front passenger seat), b) 3D printer (trunk), c) Recommending
+								interface.</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-12">
+					<div class="thumbnail">
+						<img src="table.png">
+						<div class="caption">
+							<p>Experimental details (distance and time counted from the start of the first 3D printing to the end of that)</p>
 						</div>
 					</div>
 				</div>
@@ -134,7 +153,8 @@
 			<h2>書誌情報</h2>
 			<ol>
 
-				<li>Akiyama Yoh, Miyashita Homei. 3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination. IPSJ SIGHCI Technical Report, Vol.2018-HCI-176，Issue.6，No.12，2018．(Japanese)
+				<li>Akiyama Yoh, Miyashita Homei. 3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination.
+					IPSJ SIGHCI Technical Report, Vol.2018-HCI-176，Issue.6，No.12，2018．(Japanese)
 					<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
 					 target="_blank">
 						<i class="glyphicon glyphicon-link"></i>
