--- a/contents/3DPrinCar/indexEng.html
+++ b/contents/3DPrinCar/indexEng.html
@@ -106,8 +106,8 @@
 					<p>In this paper, we proposed "3DPrinCar", which suggests and provides goods depending on destinations by combining 3D
 						Printer and car navigation system. For example, destination is related to sea, 3DPrinCar suggests goods related to
 						sea. And 3DPrinCar prepare two providing methods; 3D Printing goods inside of a car or stopping by shop and purchasing
-						goods. If users choice 3D Printing, users arrivals at the destination and system finishes 3D Printing at same time
-						by controling 3D Printing accuracy. If users choice Stopping by shop, system add the shop as transit point to car navigation
+						goods. If users choose 3D Printing, users arrivals at the destination and system finishes 3D Printing at same time
+						by controling 3D Printing accuracy. If users choose Stopping by shop, system add the shop as transit point to car navigation
 						system.</p>
 					<p>We reseach effects on travel experience by 3DPrinCar. We conducted experiments of 8 day trips. users got 9 kinds, 16
 						goods by 3D printing (2 goods of those is error of printing); They are playthings(boomerang and frisbee), items in
