--- a/contents/3DPrinCar/indexEng.html
+++ b/contents/3DPrinCar/indexEng.html
@@ -109,7 +109,7 @@
 						goods. If users choose 3D Printing, users arrivals at the destination and system finishes 3D Printing at same time
 						by controling 3D Printing accuracy. If users choose Stopping by shop, system add the shop as transit point to car navigation
 						system.</p>
-					<p>We reseach effects on travel experience by 3DPrinCar. We conducted experiments of 8 day trips. users got 9 kinds, 16
+					<p>We reseach effects on travel experience by 3DPrinCar. We conducted experiments of 8 trips. users got 9 kinds, 16
 						goods by 3D printing (2 goods of those is error of printing); They are playthings(boomerang and frisbee), items in
 						the car (PET bottle holder, carabiner, trash case), cutlery (cup, dish). Users 3D printed and used them at destination
 						or in the car at return path by more comfortably. Users stop by shop once and didn't buy anything.</p>
@@ -120,6 +120,7 @@
 		</section>
 		<section>
 			<div class="row">
+				<!--
 				<div class="col-sm-12">
 					<h2>Introduction</h2>
 					<p></p>
@@ -129,6 +130,7 @@
 					</p>
 					<p>このような選択肢ごとのメリットは，インタフェース上に「安」，「早」，「楽」というアイコンで表示される．3Dプリントする場合は，造形精度や造形時間，フィラメントの使用量などを調整した複数の選択肢を提供し，ユーザのニーズに合わせた物品の提供が可能である．</p>
 				</div>
+			-->
 				<div class="col-sm-12">
 					<div class="thumbnail">
 						<img src="systemEng.jpg">
@@ -150,10 +152,10 @@
 			</div>
 		</section>
 		<section>
-			<h2>書誌情報</h2>
+			<h2>bibliographic information</h2>
 			<ol>
 
-				<li>Akiyama Yoh, Miyashita Homei. 3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination.
+				<li>Yoh Akiyama and Homei Miyashita. 3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination.
 					IPSJ SIGHCI Technical Report, Vol.2018-HCI-176，Issue.6，No.12，2018．(Japanese)
 					<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
 					 target="_blank">
