--- a/profile.html
+++ b/profile.html
@@ -113,7 +113,7 @@
 				</ul>
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング・8mm映写機いじり・
-						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a>（<a href="http://gutugutu3030.tumblr.com/" target="_blank">低画質版</a>>）
+						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a>（<a href="http://gutugutu3030.tumblr.com/" target="_blank">低画質版</a>）
 					</li>
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
 					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
