--- a/profile.html
+++ b/profile.html
@@ -99,28 +99,22 @@
 					<small>Yoh Akiyama</small>
 				</h2>
 				<ul style="list-style-type:none;">
-					<li>明治大学大学院理工学研究科新領域創造専攻2年</li>
-					<li>学部生時代
-						<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
-					<li>
-						<a href="http://miyashita.com/">宮下研究室</a>所属</li>
+					<li>明治大学情報科学科
+						<a href="http://www.th.cs.meiji.ac.jp/" target="_blank">玉木研</a>→ 明治大学大学院新領域創造専攻
+						<a href="http://miyashita.com/" target="_blank">宮下研</a>→チームラボ</li>
 					<li>
 						<i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
-					<li>予定は
-						<a href="https://calendar.google.com/calendar/embed?src=21rsqm0npancku5es49jd8h55k%40group.calendar.google.com&ctz=Asia/Tokyo"
-						 target="_blank">
-							<i class="glyphicon glyphicon-calendar"></i>こちら</a>からご確認ください（二度手間はいやです）</li>
 				</ul>
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング・8mm映写機いじり・
-						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a>（<a href="http://gutugutu3030.tumblr.com/" target="_blank">低画質版</a>）
+						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a>（
+						<a href="http://gutugutu3030.tumblr.com/" target="_blank">低画質版</a>）
 					</li>
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
 					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
 				</ul>
-				<p>最近は3Dプリンタ関係の研究をしています．Web系は苦手です．
-					<a href="https://www.youtube.com/watch?v=_xPJkJJuWGk" target="_blank">こういうこと</a>とか
-					<a href="contents/Gilgamesh/index.html" target="_blank">こういうこと</a>して暮らしたい．</p>
+				<p>大学生時代は電子工作支援の，院生時代は3Dプリンタを使いやすくする研究をしていました．Web系は苦手です．
+					くるまかって田舎めぐりしながら暮らすのが夢です．</p>
 			</div>
 		</div>
 		<div>
@@ -211,7 +205,7 @@
 									<a href="https://www.youtube.com/watch?v=jG5BceMWTeU" target="_blank">
 										<i class="glyphicon glyphicon-film"></i>
 									</a>
-									<strong class="text-info">[学生奨励賞]</strong>									
+									<strong class="text-info">[学生奨励賞]</strong>
 								</li>
 							</ol>
 						</li>
