うわ　マジで　表題間違えてんじゃん

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/8mmFilm/game/index.html">
-								<h3 class="panel-title panelHeader">ICレス映写機</h3>
+								<h3 class="panel-title panelHeader">ICレスゲーム機</h3>
 							</a>
 						</div>
 						<div class="panel-body">
