--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/reallive2d/index.html">
+								<h3 class="panel-title panelHeader">MultiplaneGirl</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="contents/reallive2d/index.html">
+								<img src="contents/reallive2d/animation.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>アクリルのレイヤを重ねて人を形作る</p>
+								<p>サーボモータで各レイヤを動かして人の顔の向きを操作</p>
+								<p>
+									<a href="contents/reallive2d/index.html">続きを読む</a>
+								</p>
+								<p>
+									<small>2017/5-2018/1</small>
+								</p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/3DPrinCar/index.html">
 								<h3 class="panel-title panelHeader">3DPrinCar</h3>
 							</a>
