--- a/profile.html
+++ b/profile.html
@@ -113,8 +113,8 @@
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
 					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
 				</ul>
-				<p>大学生時代は電子工作支援の，院生時代は3Dプリンタを使いやすくする研究をしていました．Web系は苦手です．
-					くるまかって田舎めぐりしながら暮らすのが夢です．</p>
+				<p>大学生時代は電子工作支援の，院生時代は3Dプリンタ使用支援の研究をしていました．Web系は苦手なのでやりたくないです．
+					くるまで田舎めぐりしながら暮らすのが夢です．</p>
 			</div>
 		</div>
 		<div>
@@ -122,7 +122,7 @@
 			<p>
 				<a href="index.html">こちら</a>をごらんください．</p>
 			<p>時間があれば
-				<a href="timeline.html">こちら</a>もごらんください．</p>
+				<a href="timeline.html">こちら</a>もごらんください．（最近サボり気味で未更新…）</p>
 		</div>
 		<div>
 			<h2>お仕事</h2>
