--- a/contents/8mmFilm/badapple/index.html
+++ b/contents/8mmFilm/badapple/index.html
@@ -64,7 +64,7 @@
 							</ul>
 						</li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+						<li><a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a></li>
 
 					</ul>
 				</div>
@@ -143,7 +143,7 @@
 			<ol><a href="../projector/index.html">映写機の自作</a>ol>
 			<ol>
 				<li>試行錯誤の過程（フィルムの詳細はこちら）
-					<a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+					<a href="https://sites.google.com/view/gutugutu3030/homequanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 				</li>
 				<li>Bad Apple フィルム
 					<a href="http://www.mediafire.com/download/9c97lh8qnpsyn2t/badapple_silent.pdf" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
