--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -47,7 +47,7 @@
 							</ul>
 						</li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+						<li><a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a></li>
 
 					</ul>
 				</div>
