--- a/contents/3DPrinCar/indexEng.html
+++ b/contents/3DPrinCar/indexEng.html
@@ -80,7 +80,7 @@
 								<i class="fa fa-twitter"></i> Twitter</a>
 						</li>
 						<li>
-							<a href="https://sites.google.com/site/gutugutu30/">備忘録</a>
+							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
 						</li>
 
 					</ul>
