--- a/contents/reallive2d/index.html
+++ b/contents/reallive2d/index.html
@@ -104,7 +104,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jG5BceMWTeU" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/OnYO_MO-YYI" frameborder="0" allowfullscreen></iframe>
 						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
@@ -114,6 +114,25 @@
 					<p>絵をPCなどで描く時，パーツごとにレイヤを分ける場合がある．本システムはそのレイヤをアクリル板に分けて重ねて配置した．更にそれぞれのレイヤを独立上下左右に平行移動させることによって絵に立体感をもたせることに成功した．</p>
 					<p>同様の手法を用いたものとして，セルアニメーションのマルチプレーンカメラ [1]や，ソフトウェア上ではLive2D [2]などが挙げられる．</p>
 				</div>
+			</div>
+			<div class="row">
+
+				<div class="col-sm-6">
+					<h2>簡単な解説</h2>
+					<p>アクリル板を約7mm感覚で配置している．前髪，目（の枠）・口，瞳，顔の輪郭にわけてアクリル板にホワイトボードマーカーで描きこんでおり，これにより立体感を出している．</p>
+					<p>一つのレイヤ（アクリル板）につき4つのサーボモータで平行移動を担っている．左右にそれぞれ1つの，下に2つのサーボモータを設置している．</p>
+				</div>
+				<div class="col-sm-6">
+					<div class="thumbnail">
+						<img src="servo.png">
+						<div class="caption">
+							<p>サーボモータの動き</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+
 				<div class="col-sm-12">
 					<h2>制作方法</h2>
 					<p>正直著者が時間短縮のため（嘘　サボって）まともに設計しなかったため，使用した素材や画像を紹介するに留める．設計図のようなものは上記Githubに上がっているrealLive2DSimulatorを起動していただきたい</p>
