--- a/contents/reallive2d/index.html
+++ b/contents/reallive2d/index.html
@@ -179,7 +179,7 @@
 							</td>
 						</tbody>
 					</table>
-					<h3>組み立て時画像一覧</h3>
+					<h3>組み立て時画像一覧（準備中）</h3>
 					<p>基本的にはサーボの取り付け部分にプラ棒をアロンアルファでくっつける，のを層によってずらしていくだけである．</p>
 					<p>若干投げやりだが，ここの画像を見て解析して作って欲しい．質問あればTwitterのリプライなどでどうぞ．</p>
 				</div>
