--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 								<li>
 									<a href="library.html">Libraries</a>
 								</li>
+								<li>
+									<a href="app/index.html">Apps</a>
+								</li>
 							</ul>
 						</li>
 
