--- a/profile.html
+++ b/profile.html
@@ -59,6 +59,9 @@
 								<li>
 									<a href="library.html">Libraries</a>
 								</li>
+								<li>
+									<a href="app/index.html">Apps</a>
+								</li>
 							</ul>
 						</li>
 						<li class="dropdown active">
