--- a/library.html
+++ b/library.html
@@ -50,6 +50,9 @@
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="index.html">Products</a></li>
 								<li><a href="library.html">Libraries</a></li>
+								<li>
+									<a href="app/index.html">Apps</a>
+								</li>
 							</ul>
 						</li>
 
